# mapskit

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bk  README.md  developer-notes.md  orbbec_tracking.md  orbbec_voxels.md  package.xml  pyproject.toml  setup.sh
.github/workflows/: cmake-single-platform.yml
config/: default_conf.yaml
include/mapskit/: mapskit.hpp
launch/: tracking.launch.py
mapskit/: __init__.py  module_to_import.py
mavman/: module_to_import.py
scripts/: py_demo.py  py_node.py
setup/: setup-deps.sh  setup-ros.sh
src/: cpp_node.cpp  main.cpp  mapskit.cpp
tests/: test.cpp  tutorial.cpp
tools/: start_tmux.sh  tf-octo.sh
